[package]
name = "imageflow_abi"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
workspace = "../"
build = "build.rs"
edition = "2021"

[lib]
name = "imageflow"
doc = true
# Default crate type for non-musl targets
crate-type = ["cdylib"]
doctest = false

# Specify the exact musl target triple
[target.'x86_64-unknown-linux-musl']
crate-type = ["staticlib"]
strip = true
lto = true

[target.'aarch64-unknown-linux-musl']
crate-type = ["staticlib"]
strip = true
lto = true


[dependencies]
libc = "0.2"
imageflow_core = { path = "../imageflow_core", version = "*"}
backtrace = "*"
smallvec="*"
base64="0.22"

[build-dependencies]
imageflow_helpers = { path = "../imageflow_helpers", version = "*"}
cbindgen = "0.28"
regex = "1"

[features]
nightly = ["imageflow_core/nightly", "imageflow_helpers/nightly"]
