[package]
name = "imageflow_abi"
version = "4.0.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "C ABI for imageflow image processing"

[lib]
name = "imageflow"
doc = true
crate-type = ["cdylib"]
doctest = false

[dependencies]
imageflow_core = { path = "../imageflow_core" }
