[package]
name = "imageflow_abi"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
workspace = "../"
build = "build.rs"
edition = "2024"
rust-version = "1.93"
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

[lib]
name = "imageflow"
doc = true
# Default crate type for non-musl targets
crate-type = ["cdylib"]
doctest = false



[dependencies]
libc = "0.2"
imageflow_core = { path = "../imageflow_core", version = "*"}
backtrace = "*"
smallvec="*"
base64="0.22"

[build-dependencies]
imageflow_helpers = { path = "../imageflow_helpers", version = "*"}
cbindgen = "0.29"
regex-lite = { version = "0.1.6" }
rayon = "1"
