[package]
name = "imageflow_cdylib"
version = "0.1.0"
authors = ["Nathanael Jones <nathanael.jones@gmail.com>"]
workspace = "../"


[lib]
name = "imageflowrs"
doc = true
crate-type = ["cdylib"]
doctest = false

[dependencies]
libc = "0.2.0"
imageflow_core = { path = "../imageflow_core", version = "*" }
