[package]
name = "imageflow_focus"
version = "0.1.0"
edition = "2024"
description = "Composite saliency and face detection for smart cropping"
license = "AGPL-3.0-or-later"

[features]
default = ["saliency"]
saliency = []
faces = ["rustface"]

[dependencies]
imageflow_types = { path = "../imageflow_types" }
multiversion = "0.8"
rustface = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "saliency_bench"
harness = false
