[package]
name = "imageflow_helpers"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
workspace = "../"

[dependencies]
libc = "0.2"

# time
time = "*"
chrono =  "0.4"

# serialization
serde = "*"
serde_json = "*"
serde_derive = "*"
rustc-serialize = "*"

#lazy static
lazy_static = "1"

# fast hashes, crypto hashs
twox-hash = "1"
fnv = "*"
blake2-rfc = "*"
sha2 = "*"
digest = "*"

uuid = { version = "*", features= ["v4", "v5"]}

lockless = { git="https://github.com/Diggsey/lockless", rev="15264477a4889a9cb2964180b33a53919d72d3fc" }
smallvec = "*"
# regex
regex = { version = "1" } #, features = ["pattern"]
rand = "*"

num = "*"

base64 = "0.6"
mockito = { git="https://github.com/lipanski/mockito"}
zip = { version = "0.5", default-features = false }


app_dirs = "^1.1.1"
chashmap = "2.2"
parking_lot = {version = "0.8"}

unicase = "2"
# HTTPS is a little bit of a nightmare

error-chain = "*"

hyper = "=0.10.12"
reqwest = "0.6"
hyper-native-tls = "*"

backtrace = "0.3.2"


[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies]
openssl = "0.9"
hyper-openssl = "0.2.6"

[features]
nightly = ["parking_lot/nightly"]
