[package]
name = "imageflow_helpers"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
workspace = "../"
edition = "2024"
rust-version = "1.93"
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

[dependencies]
libc = "0.2"

# time
time = "0.3.47"
chrono =  "0.4"

# serialization
serde = "*"
serde_json = "*"
serde_derive = "*"


#lazy static
lazy_static = "1"

# fast hashes, crypto hashs
twox-hash = "2"
fnv = "*"
blake2-rfc = "*"
sha2 = "*"
digest = "*"

uuid = { version = "*", features= ["v4", "v5"]}

#lockless = { git="https://github.com/Diggsey/lockless", rev="15264477a4889a9cb2964180b33a53919d72d3fc" }
smallvec = "*"
# regex
regex-lite = { version = "0.1.6" } #, features = ["pattern"]
rand = "*"
rgb = "0.8"

base64 = "0.22"


unicase = "2"
# HTTPS is a little bit of a nightmare

#error-chain = "*"


backtrace = "0.3"

mimalloc = { version = "*", features = ["secure"], optional = true }


[dev-dependencies]


[features]
mimalloc = ["dep:mimalloc"]

