[package]
name = "imageflow_http_helpers"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageflow_helpers = { path = "../imageflow_helpers", version = "*" }

reqwest = { version = "0.12.7", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(all(target_arch = "aarch64", target_os = "windows"))'.dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "native-tls-vendored"] }

[target.'cfg(any(target_os = "linux", target_env="musl"))'.dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "rustls-tls"] }
