[package]
name = "imageflow_http_helpers"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
edition = "2024"
rust-version = "1.93"
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# only enable ureq if we have the feature flag ureq

[dependencies]
imageflow_helpers = { path = "../imageflow_helpers" }
ureq = { version = "3", optional = true }
uuid = { version = "1.0", features = ["v4"] }

#[target.'cfg(all(target_arch = "aarch64", target_os = "windows"))'.dependencies]
