[package]
name = "imageflow_riapi"
version = "0.1.0"
authors = ["Nathanael Jones <nathanael.jones@gmail.com>"]
workspace = "../"

[dependencies]
imageflow_types = { path = "../imageflow_types", version = "*" }
imageflow_helpers = { path = "../imageflow_helpers", version = "*" }
url = "*"
ieee754 ="*"
time="*"
macro-attr= { git="https://github.com/DanielKeep/rust-custom-derive.git"}
enum_derive= { git="https://github.com/DanielKeep/rust-custom-derive.git" }
option-filter = "1.0"
lazy_static = "*"

difference = "0.4"


# Tests take 600ms each at 0, 200ms each at 1, 36ms each at 2, 26ms each at 3
[profile.test]
opt-level = 1