[package]
name = "imageflow_riapi"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
workspace = "../"
edition = "2018"

[dependencies]
imageflow_types = { path = "../imageflow_types", version = "*" }
imageflow_helpers = { path = "../imageflow_helpers", version = "*" }
url = "*"
ieee754 ="0.2"
time="*"
macro-attr= { git="https://github.com/DanielKeep/rust-custom-derive.git"}
enum_derive= { git="https://github.com/DanielKeep/rust-custom-derive.git" }
option-filter = "1"
lazy_static = "1"

[dev-dependencies]
difference = "2" # update to v2

[features]
nightly = ["imageflow_helpers/nightly"]
