[package]
name = "imageflow_server"
version = "0.1.0"
authors = ["Nathanael Jones <nathanael.jones@gmail.com>"]
workspace = "../"



[dependencies]
libc = "0.2"

# time
time = "*"
chrono =  "0.2"

# serialization
serde = "*"
serde_json = "*"
serde_derive = "*"
rustc-serialize = "*"

#lazy static
lazy_static = "0.1.*"

# fast hashes, crypto hashs
twox-hash = "1.0"
fnv = "*"
blake2-rfc = "*"

## Crate-specific dependencies


clap = "2"

router = "*"
iron = "*"


hyper = { version = "*", default-features = false }
threadpool = "1.0"

imageflow_core = { path = "../imageflow_core", version = "*" }
imageflow_types = { path = "../imageflow_types", version = "*" }
imageflow_helpers = { path = "../imageflow_helpers", version = "*" }
imageflow_riapi = { path = "../imageflow_riapi", version = "*" }


rand = "*"
lru-cache = "*"
persistent = "*"
regex = "0.2"
log="*"
env_logger="*"
wait-timeout = "0.1"
bincode= {git= "https://github.com/TyOverby/bincode" }
staticfile = { git= "https://github.com/onur/staticfile", rev= "9f2ff7201eda648128c92e3f5597c587f0629f51" }
conduit-mime-types = "*"
url="*"
hyper-native-tls="*"
reqwest="*"

[build-dependencies]
cmake = "0.1.17"

[[bin]]
name = "imageflow_server"
path = "src/main.rs"
doc = false

[dependencies.mount]

git = "https://github.com/iron/mount.git"

[dependencies.logger]

git = "https://github.com/iron/logger.git"
