[package]
name = "imageflow_tool"
version = "4.0.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for imageflow image processing"

[[bin]]
name = "imageflow_tool"
path = "src/main.rs"
doc = false

[dependencies]
imageflow_core = { version = "0.1.0" , git = "https://github.com/imazen/imageflow" }
imageflow_types = { version = "0.1.0" , git = "https://github.com/imazen/imageflow" }
serde_json = { workspace = true }
clap = "4"
