[package]
name = "imageflow_types"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
workspace = "../"
build = "build.rs"
edition = "2021"

[lib]
name="imageflow_types"
doctest = false

[dependencies]
serde = "1"
serde_json = "1"
serde_derive = "1"
lazy_static = "1"
regex-lite = { version = "0.1.6" }
imageflow_helpers = { path = "../imageflow_helpers", version = "*" }
chrono = "0.4"
imgref = "1.10"
rgb = "0.8"

[build-dependencies]
quick-error = "2"
chrono = "0.4"
rayon = "1"

[features]
nightly = ["imageflow_helpers/nightly"]

