[package]
name = "imageflow_types"
version = "0.1.0"
authors = ["Lilith River <lilith@imazen.io>"]
workspace = "../"
build = "build.rs"
edition = "2021"

[lib]
name="imageflow_types"
doctest = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
regex-lite = { version = "0.1.6" }
imageflow_helpers = { path = "../imageflow_helpers" }
chrono = { version = "0.4", features = ["serde"] }
imgref = "1.9"
rgb = "0.8"
schemars = { version = "0.8", optional = true }
utoipa = { version = "4.2", features = ["preserve_order", "serde_json"], optional = true }
inventory = "0.3"

[build-dependencies]
quick-error = "2"
rayon = "1"

[features]
nightly = ["imageflow_helpers/nightly"]
json-schema = ["dep:schemars"]
schema-export = ["dep:utoipa"]

