[package]
name = "imageflow_types"
version = "4.0.0-alpha.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "JSON API schema types for imageflow 4"

[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
