[package]
name = "c_components_tests"
version = "0.1.0"
links = "imageflow_private_c_components_tests"
authors = ["Nathanael Jones <nathanael.jones@gmail.com>", "Kornel Lesiński <kornel@geekhood.net>"]
workspace = "../../"
build = "src/build.rs"

[[bin]]
name = "profile_imageflow"
path = "src/profile.rs"

[dependencies]
imageflow_c_components = {path = ".."}
lcms2-sys = "2.4.8"
libpng-sys = "0.2.4"
mozjpeg-sys = "0.5.11"
libz-sys = "1.0.18"


[build-dependencies.cc]
version = "1.0.3"
features = ["parallel"]

[build-dependencies]
glob = "0.2.11"
