[package]
name = "c_components_tests"
version = "0.1.0"
links = "imageflow_private_c_components_tests"
authors = ["Lilith River <lilith@imazen.io>", "Kornel Lesiński <kornel@geekhood.net>"]
workspace = "../../"
build = "src/build.rs"

[[bin]]
name = "profile_imageflow"
path = "src/profile.rs"

[dependencies]
imageflow_c_components = {path = ".."}
lcms2-sys = "3.1.4"
libpng-sys = "1.1.7"
mozjpeg-sys = "0.10"
libz-sys = "1.0.18"


[build-dependencies.cc]
version = "1.0.52"
features = ["parallel"]

[build-dependencies]
glob = "0.3.0"
